--- a/28/style.css
+++ b/28/style.css
@@ -28,9 +28,10 @@ body{
 .information img{
     width: 220px;
     height: 41%;
-    position: fixed;top: 10%;right: 20%;
+    position: fixed;top: 30%;right: 20%;
 }
 .information{
+    margin-top: 20%;
     font-family:serif;
     color: aliceblue;
     text-align: center;
